# ComfyUI-Qwen3.5

./: LICENSE  README.md  __init__.py  nodes.py  nodes_gguf.py  nodes_load_url.py  nodes_wavespeed.py  nodes_wavespeed_llm.py  pyproject.toml  requirements-gguf.txt  requirements-transformers.txt  requirements.txt
.github/workflows/: publish.yml
workflows/: qwen3.5.json  qwen3.5_gguf.json
