[project]
name = "qwen3.5"
description = "Custom ComfyUI node for Qwen3.5-9B — a unified natively multimodal model with image, video, and text understanding capabilities including thinking mode."
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["# ComfyUI-Qwen3.5 requirements", "# Qwen3.5 models require transformers >= 5.2.0", "transformers>=5.2.0", "torch", "torchvision", "huggingface-hub", "numpy", "Pillow", "bitsandbytes", "accelerate"]

[project.urls]
Repository = "https://github.com/DanielBartolic/ComfyUI-Qwen3.5"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/DanielBartolic/ComfyUI-Qwen3.5/wiki"
"Bug Tracker" = "https://github.com/DanielBartolic/ComfyUI-Qwen3.5/issues"

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-Qwen3.5"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

